snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.module.sha512
dc71ec7d9b3b3d9c592a9c3fef219371304ecfff8c411a1d3558651f82304e7a7f1bc84fce9c85a0e86748374040d53659574155028e9b8601b909403bfb1b49